# NavCar

./: CMakeLists.txt  README.md
config/: camera.yaml
src/: hik.cpp  threadpool.cpp
